--- a/SlurpJob/SlurpJob.csproj
+++ b/SlurpJob/SlurpJob.csproj
@@ -4,7 +4,26 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    
+    <!-- Binary Size Optimizations -->
+    <PublishTrimmed>true</PublishTrimmed>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
+    <TrimMode>partial</TrimMode>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <DebuggerSupport>false</DebuggerSupport>
+    <EnableUnsafeBinaryFormatterSerialization>false</EnableUnsafeBinaryFormatterSerialization>
+    <EnableUnsafeUTF7Encoding>false</EnableUnsafeUTF7Encoding>
+    <HttpActivityPropagationSupport>false</HttpActivityPropagationSupport>
+    <MetadataUpdaterSupport>false</MetadataUpdaterSupport>
+    <UseSystemResourceKeys>true</UseSystemResourceKeys>
+    <JsonSerializerIsReflectionEnabledByDefault>true</JsonSerializerIsReflectionEnabledByDefault>
   </PropertyGroup>
+  
+  <!-- Preserve assemblies that use reflection -->
+  <ItemGroup>
+    <TrimmerRootAssembly Include="MaxMind.GeoIP2" />
+    <TrimmerRootAssembly Include="Microsoft.AspNetCore.Components.Web" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MaxMind.GeoIP2" Version="5.4.1" />
