Implement port classification and segmented live feed UI redesign

--- a/SlurpJob.Tests/SlurpJob.Tests.csproj
+++ b/SlurpJob.Tests/SlurpJob.Tests.csproj
@@ -27,4 +27,11 @@
     <ProjectReference Include="..\SlurpJob\SlurpJob.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\port_table.csv">
+      <Link>port_table.csv</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
