Add database files to .gitignore
- Added SQLite database patterns (*.db, *.db-shm, *.db-wal) to prevent committing local production data copies
- Downloaded slurp.db from production for local analysis

--- a/.gitignore
+++ b/.gitignore
@@ -497,3 +497,8 @@ deploy.config.ps1
 # Deployment Archives
 deploy.zip
 deploy.7z
+
+# SQLite Database Files (local copies)
+*.db
+*.db-shm
+*.db-wal
