Refactor: Merge parsers into classifiers and use JSON catalog

--- a/SlurpJob/SlurpJob.csproj
+++ b/SlurpJob/SlurpJob.csproj
@@ -41,6 +41,9 @@
       <Link>port_table.csv</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Classification\attack_catalog.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
